Attempting to exclude upload tasks

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,12 @@
 language: java
 
 before_cache:
-  rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
-  rm -rf $HOME/.gradle/caches/*/plugin-resolution/
+  - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
+  - rm -rf $HOME/.gradle/caches/*/plugin-resolution/
+
+script:
+  - gradle assemble -x bintrayUpload
+  - gradle check -x bintrayUpload
 
 cache:
   directories:
