This should make it work

--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,21 @@
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath "org.jetbrains.dokka:dokka-gradle-plugin:0.9.13"
+    }
+}
+
 plugins {
-    id "org.jetbrains.kotlin.jvm" version "1.1.1"
+    id "org.jetbrains.kotlin.jvm" version "1.1.2-2"
     id "com.github.johnrengelman.shadow" version "1.2.4"
     id "com.jfrog.bintray" version "1.7.3"
 }
 
 apply plugin: "maven-publish"
 apply plugin: "maven"
+apply plugin: "org.jetbrains.dokka"
 
 group = pluginGroup
 version = pluginVersion
@@ -37,16 +47,8 @@ shadowJar.configurations = [project.configurations.shade]
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
     compile 'org.spigotmc:spigot-api:1.11.2-R0.1-SNAPSHOT'
-    shade "org.jetbrains.kotlin:kotlin-stdlib:1.1.1"
+    shade "org.jetbrains.kotlin:kotlin-stdlib:1.1.2"
     kapt "com.redrield:spigot-yaml-generator:1.0"
-}
-
-import org.apache.tools.ant.filters.ReplaceTokens
-
-processResources {
-    from(sourceSets.main.resources.srcDirs) {
-        filter ReplaceTokens, tokens: [version: version]
-    }
 }
 
 task sendToServer(type: Copy) {
@@ -80,4 +82,12 @@ publishing {
             version "1.0"
         }
     }
+}
+
+dokka {
+    moduleName = "data"
+    outputFormat = "jekyll"
+    outputDirectory = "$buildDir/javadoc"
+    processConfigurations = ['compile']
+    sourceDirs = files("src/main/kotlin")
 }
