--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,3 @@
-buildscript {
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath "org.jetbrains.dokka:dokka-gradle-plugin:0.9.13"
-    }
-}
-
 plugins {
     id "org.jetbrains.kotlin.jvm" version "1.1.2-2"
     id "com.github.johnrengelman.shadow" version "1.2.4"
@@ -15,7 +6,6 @@ plugins {
 
 apply plugin: "maven-publish"
 apply plugin: "maven"
-apply plugin: "org.jetbrains.dokka"
 
 group = pluginGroup
 version = pluginVersion
@@ -47,13 +37,12 @@ shadowJar.configurations = [project.configurations.shade]
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
     compile 'org.spigotmc:spigot-api:1.11.2-R0.1-SNAPSHOT'
-    shade "org.jetbrains.kotlin:kotlin-stdlib:1.1.2"
-    kapt "com.redrield:spigot-yaml-generator:1.0"
+    shade "org.jetbrains.kotlin:kotlin-stdlib-jre8:1.1.2-2"
 }
 
 task sendToServer(type: Copy) {
     from("build/libs/KInventories-1.0-SNAPSHOT-all.jar")
-    into("/Users/Rhys/Desktop/Spigot/plugins")
+    into("${System.getProperty("user.home")}/Desktop/SpigotServer/plugins")
 }
 
 bintray {
@@ -68,7 +57,7 @@ bintray {
         repo = "maven"
         name = "kinventories"
         version {
-            name = version
+            name = "1.2"
         }
     }
 }
@@ -79,15 +68,8 @@ publishing {
             from components.java
             groupId "com.redrield"
             artifactId "kinventories"
-            version "1.0"
+            version "1.2"
         }
     }
 }
 
-dokka {
-    moduleName = "data"
-    outputFormat = "jekyll"
-    outputDirectory = "$buildDir/javadoc"
-    processConfigurations = ['compile']
-    sourceDirs = files("src/main/kotlin")
-}
