Please travis I fan

--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,21 @@
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-stdlib:1.1.2-4"
+    }
+}
+
 plugins {
-    id "org.jetbrains.kotlin.jvm" version "1.1.2-2"
     id "com.github.johnrengelman.shadow" version "1.2.4"
     id "com.jfrog.bintray" version "1.7.3"
 }
 
 apply plugin: "maven-publish"
 apply plugin: "maven"
+apply plugin: "kotlin"
 
 group = pluginGroup
 version = pluginVersion
@@ -37,7 +47,7 @@ shadowJar.configurations = [project.configurations.shade]
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
     compile 'org.spigotmc:spigot-api:1.11.2-R0.1-SNAPSHOT'
-    shade "org.jetbrains.kotlin:kotlin-stdlib-jre8:1.1.2-2"
+    shade "org.jetbrains.kotlin:kotlin-stdlib-jre8:1.1.2-4"
 }
 
 task sendToServer(type: Copy) {
