Allowing additions of precreated ItemStacks
Still allowing blocks to add ItemMeta and the like

--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,10 @@
-buildscript {
-    repositories {
-        mavenCentral()
-    }
-
-    dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-stdlib:1.1.2-4"
-    }
-}
-
 plugins {
-    id "com.github.johnrengelman.shadow" version "1.2.4"
+    id "org.jetbrains.kotlin.jvm" version "1.1.2-2"
     id "com.jfrog.bintray" version "1.7.3"
 }
 
 apply plugin: "maven-publish"
 apply plugin: "maven"
-apply plugin: "kotlin"
 
 group = pluginGroup
 version = pluginVersion
@@ -35,19 +24,9 @@ repositories {
     }
 }
 
-configurations {
-    shade
-
-    compile.extendsFrom shade
-    compile.extendsFrom kapt
-}
-
-shadowJar.configurations = [project.configurations.shade]
-
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.11'
     compile 'org.spigotmc:spigot-api:1.11.2-R0.1-SNAPSHOT'
-    shade "org.jetbrains.kotlin:kotlin-stdlib-jre8:1.1.2-4"
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:1.1.2-2"
 }
 
 task sendToServer(type: Copy) {
@@ -67,7 +46,7 @@ bintray {
         repo = "maven"
         name = "kinventories"
         version {
-            name = "1.2"
+            name = "1.2.1"
         }
     }
 }
@@ -78,7 +57,7 @@ publishing {
             from components.java
             groupId "com.redrield"
             artifactId "kinventories"
-            version "1.2"
+            version "1.2.1"
         }
     }
 }
